# Ohm-PICO-RP2040

./: .gitignore  README.md  diagram.json  wokwi.toml
src/: CMakeLists.txt  CMakePresets.json  config.h  main.c
src/hardFiles/: buttons.c  buttons.h  debouncer.c  debouncer.h  display.c  display.h  led_matrix.c  led_matrix.h  ohmmeter.c  ohmmeter.h
